Fixes & new Features
- Fixed mistyped variable names  in user class "tansactions".

- Created a "method overview" with description, dependencies,
parameters, return types and exception throws. (TODO: Remodel
Architecture using UML Component diagram or similar..)

- Fixed several problems where variables were not defined. (Problems
were "invisible" since error reporting was turned off)

- Changed field amount to float in table transactions

- Changed user index page to contain more information about the users
accounts.

- Changed employee view user details page to contain a "back to user
list" link.

- Changed email function for consistency. All Email consist of
<personalized greeting/salutation> <message> <footer>. This results in
more consistent looking Emails. Example: <"Dear User One, "> <"we are
informing you of xyz"> <"best regards, Customer Service">

- Changes to stylesheet

- Fixed typos and probably some other minor stuff

--- a/phase5/style/style.css
+++ b/phase5/style/style.css
@@ -165,11 +165,11 @@ li
 }
  
 .accountList {
-	position:absolute;
-	top:150px;
+	position:relative;
+	top:50px;
 	left:20px;
-	width:225px;
-	height:300px;
+	width:425px;
+	/*height:300px;*/
 	overflow-y:auto;
 	overflow-x:hidden;
 }
@@ -184,9 +184,10 @@ li
 }
 
 .accountCreation {
-	position:absolute;
-	top:150px;
-	left:250px;
+	position:absolute;	
+	left:180px;
+	top:0px;
+	
 	width:220px;
 	height:30px;
 }
@@ -195,6 +196,9 @@ li
 	width:200px;
 }
 
+.accountOverview {
+	padding-top:80px;
+}
 .pure-button2 {
 	display:inline-block;
 	*display:inline;
